--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ php:
     - 5.4
     - hhvm
 
-before_script: "composer install --dev --prefer-dist --no-interaction"
+before_script: "composer install --dev --prefer-source --no-interaction"
 script: "vendor/bin/phpspec run"
